--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "babelify": "^9.0.0",
     "browserify": "^16.2.2",
     "express": "^4.16.3",
+    "linkstate": "^1.1.1",
     "milligram": "^1.3.0",
+    "mkdirp": "^0.5.1",
     "mocha": "^5.2.0",
     "normalize.css": "^8.0.0",
     "preact": "^8.2.9",
