--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "async": "^2.6.1",
     "babelify": "^9.0.0",
     "browserify": "^16.2.2",
+    "debug": "^3.1.0",
     "express": "^4.16.3",
     "linkstate": "^1.1.1",
     "milligram": "^1.3.0",
@@ -28,7 +29,8 @@
     "mocha": "^5.2.0",
     "normalize.css": "^8.0.0",
     "preact": "^8.2.9",
-    "standard": "^11.0.1"
+    "standard": "^11.0.1",
+    "ws": "^6.0.0"
   },
   "dependencies": {
     "big.js": "^5.1.2",
