--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "big.js": "^5.1.2",
-    "eosjs": "^16.0.0"
+    "eosjs": "^16.0.0",
+    "isomorphic-ws": "^4.0.1"
   }
 }
