--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "standard && mocha",
     "prepare": "npm run setup-build && npm run babelify",
     "setup-build": "rm -rf dist && mkdir -p dist",
-    "babelify": "browserify -s Sunbeam lib/index.js -o dist/index.js -t [ babelify --presets [ @babel/preset-env ] ]"
+    "babelify": "npm run babelify-ws && npm run babelify-legacy",
+    "babelify-ws": "browserify -s Sunbeam lib/index.js -o dist/index.js -t [ babelify --presets [ @babel/preset-env ] ]",
+    "babelify-legacy": "browserify -s Sunbeam lib/index-legacy.js -o dist/legacy.js -t [ babelify --presets [ @babel/preset-env ] ]"
   },
   "keywords": [
     "eos",
