sign: receive metadata for tx headers from websocket
gets the required data for tx signing from the websocket instead
of an eos node http endpoint.

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@babel/polyfill": "^7.0.0",
     "@babel/runtime": "^7.0.0",
     "big.js": "^5.1.2",
+    "cbq": "git+https://github.com/bitfinexcom/cbq-js.git",
     "eosjs": "^16.0.0",
     "isomorphic-ws": "^4.0.1",
     "ws": "^6.0.0"
