--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "test": "standard && mocha",
     "prepare": "npm run setup-build && npm run babelify",
     "setup-build": "rm -rf dist && mkdir -p dist",
-    "babelify": "npm run babelify-ws && npm run babelify-legacy",
-    "babelify-ws": "browserify -s Sunbeam lib/index.js -o dist/index.js -t [ babelify --presets [ @babel/preset-env ] ]",
-    "babelify-legacy": "browserify -s Sunbeam lib/index-legacy.js -o dist/legacy.js -t [ babelify --presets [ @babel/preset-env ] ]"
+    "babelify": "browserify -s Sunbeam lib/index.js -o dist/index.js -t [ babelify --presets [ @babel/preset-env ] ]"
   },
   "keywords": [
     "eos",
@@ -28,18 +26,12 @@
     "@babel/plugin-transform-regenerator": "^7.0.0",
     "@babel/plugin-transform-runtime": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
-    "async": "^2.6.1",
     "babel-plugin-syntax-async-functions": "^6.13.0",
     "babelify": "^9.0.0",
     "browserify": "^16.2.2",
     "debug": "^3.1.0",
-    "express": "^4.16.3",
-    "linkstate": "^1.1.1",
-    "milligram": "^1.3.0",
     "mkdirp": "^0.5.1",
     "mocha": "^5.2.0",
-    "normalize.css": "^8.0.0",
-    "preact": "^8.2.9",
     "standard": "^11.0.1"
   },
   "dependencies": {
