--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "standard && mocha",
     "prepare": "npm run setup-build && npm run babelify",
     "setup-build": "rm -rf dist && mkdir -p dist",
-    "babelify": "browserify -s Sunbeam lib/index.js -o dist/index.js -t [ babelify --presets [ @babel/preset-env ] ]"
+    "babelify": "browserify -s Sunbeam lib/index.js -o dist/index.js -t [ babelify --presets [ @babel/preset-env ] --global ]"
   },
   "keywords": [
     "eos",
@@ -42,5 +42,9 @@
     "eosjs": "^16.0.0",
     "isomorphic-ws": "^4.0.1",
     "ws": "^6.0.0"
-  }
+  },
+  "browserslist": [
+    "IE 11",
+    "Safari 11"
+  ]
 }
