--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "cbq": "git+https://github.com/bitfinexcom/cbq-js.git",
     "eosjs": "^16.0.0",
     "isomorphic-ws": "^4.0.1",
-    "mandelbrot": "https://github.com/bitfinexcom/mandelbrot.git",
+    "mandelbrot": "https://github.com/bitfinexcom/mandelbrot.git#bf8ab4f273ff33ec35fbcb9a7f5f2d5f46ee7eb7",
     "ws": "^6.0.0"
   },
   "browserslist": [
