--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "babelify": "^9.0.0",
     "browserify": "^16.2.2",
     "mocha": "^5.2.0",
+    "scatterjs-core": "^2.3.7",
+    "scatterjs-plugin-eosjs": "^1.3.7",
     "standard": "^12.0.0"
   },
   "dependencies": {
