--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "eosjs": "^16.0.0",
     "isomorphic-ws": "^4.0.1",
     "mandelbrot": "https://github.com/bitfinexcom/mandelbrot.git#5d8d4c73d3cf33f521102c30fed31f9999acced5",
-    "ws": "^6.0.0"
+    "node-fetch": "^2.2.1",
+    "ws": "^6.1.0"
   },
   "browserslist": [
     "IE 11",
