--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "babelify": "^9.0.0",
     "browserify": "^16.2.2",
     "mocha": "^5.2.0",
-    "scatterjs-core": "^2.3.7",
-    "scatterjs-plugin-eosjs": "^1.3.7",
+    "scatterjs-core": "^2.7.17",
+    "scatterjs-plugin-eosjs2": "^1.5.0",
     "standard": "^12.0.0"
   },
   "dependencies": {
@@ -39,7 +39,7 @@
     "@babel/runtime": "^7.0.0",
     "big.js": "^5.1.2",
     "cbq": "git+https://github.com/bitfinexcom/cbq-js.git",
-    "eosjs": "^16.0.0",
+    "eosjs": "^20.0.0",
     "isomorphic-ws": "^4.0.1",
     "mandelbrot": "https://github.com/bitfinexcom/mandelbrot.git#7bf653dbaaeee255ce6c8b76353e56d6ca2f4505",
     "node-fetch": "^2.2.1",
