implemented transfer/withdraw; corrected dependencies list

--- a/config/example-ws.config.json.example
+++ b/config/example-ws.config.json.example
@@ -8,6 +8,7 @@
       "aux": "ws://__API__"
     },
     "eos": {
+      "exchangeContract": "__CONTRACT__",
       "expireInSeconds": 129600,
       "httpEndpoint": "http://__API__",
       "auth": {
