--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-plugin-syntax-async-functions": "^6.13.0",
     "babelify": "^9.0.0",
     "browserify": "^16.2.2",
+    "eosjs": "^20.0.3",
     "mocha": "^5.2.0",
     "node-fetch": "^2.2.1",
     "scatterjs-core": "^2.7.17",
@@ -39,10 +40,7 @@
     "@babel/polyfill": "^7.0.0",
     "@babel/runtime": "^7.0.0",
     "cbq": "git+https://github.com/bitfinexcom/cbq-js.git",
-    "eosjs": "^20.0.0",
-    "isomorphic-ws": "^4.0.1",
-    "mandelbrot": "github:bitfinexcom/mandelbrot#master",
-    "ws": "^6.1.0"
+    "mandelbrot": "github:bitfinexcom/mandelbrot#master"
   },
   "browserslist": [
     "IE 11",
