--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "node-fetch": "^2.2.1",
     "scatterjs-core": "^2.7.17",
     "scatterjs-plugin-eosjs2": "^1.5.0",
-    "standard": "^14.0.0"
+    "standard": "^14.0.0",
+    "ws": "^7.3.1"
   },
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
