remove native scatter from sunbeam

--- a/package.json
+++ b/package.json
@@ -26,15 +26,17 @@
     "@babel/plugin-transform-regenerator": "^7.0.0",
     "@babel/plugin-transform-runtime": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
+    "@scatterjs/core": "^2.7.53",
+    "@scatterjs/eosjs2": "^1.5.35",
     "babel-plugin-syntax-async-functions": "^6.13.0",
     "babelify": "^9.0.0",
     "browserify": "^16.2.2",
+    "elliptic": "^6.5.3",
     "eosjs": "^20.0.3",
     "mocha": "^5.2.0",
     "node-fetch": "^2.2.1",
-    "scatterjs-core": "^2.7.17",
-    "scatterjs-plugin-eosjs2": "^1.5.0",
     "standard": "^14.0.0",
+    "universal-authenticator-library": "^0.3.0",
     "ws": "^7.3.1"
   },
   "dependencies": {
