--- a/config/example-ws.config.json.example
+++ b/config/example-ws.config.json.example
@@ -10,6 +10,10 @@
     "eos": {
       "exchangeContract": "__CONTRACT__",
       "expireInSeconds": 129600,
+      "addAuth": {
+        "account": "__ACCOUNT__",
+        "permission": "__PERMISSION__"
+      },
       "httpEndpoint": "http://__API__",
       "auth": {
         "keys": {
